--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-favicon": "^2.0.3",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.12.2",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
